--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
 	},
 	"require": {
 		"silverstripe/framework": "^3.1.0"
-	}
+	},
+	"suggest": {
+		"silverstripe/selectupload": "Allows users to select the folder that they wish to upload newly added files to"
+  }
 }
